--- a/chart.html
+++ b/chart.html
@@ -22,11 +22,11 @@
     </header>
 
     <h2 class="title">
-        <img src="Chart.png" alt="Pencil Icon" class="title-icon"> Collection Chart
+        <img src="chart.png" alt="Pencil Icon" class="title-icon"> Collection Chart
     </h2>
 
     <div class="filter-container">
-        <label for="searchBox">Branch: </label>
+        <label for="searchBox">Branch</label>
         <p name="branchName" id="branchName"></p>
         <input type="hidden" name="branchName" id="hiddenBranchName" />
     </div>
