--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div id="loginForm">
         <h2>Login</h2>
             <img src="user.png" alt="logo" class= "logo">
-            <h4>Wellcome to chengannur chits</h4>
+            <h4>Welcome to Chengannur chits</h4>
         <form>
-            <input type="text" placeholder="User Name" id="username" name="username" required>
+            <input type="text" placeholder="Username" id="username" name="username" required>
             <input type="password" placeholder="Password" id="password" name="password" required>
             <input type="submit" value="Login">
         </form>
