--- a/collection.html
+++ b/collection.html
@@ -43,7 +43,7 @@
             </div>
             <div class="input-box">
                 <label for="staff-name">Staff Name</label>
-                <input type="text" placeholder="Staff full Name" id="staffName" required>
+                <input type="text" placeholder="Staff full Name" id="staffName"  autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="receipt-date">Receipt Date</label>
@@ -51,31 +51,31 @@
             </div>
             <div class="input-box">
                 <label for="cust-name">Customer Name</label>
-                <input type="text" placeholder="Customer Full Name" id="custName" required>
+                <input type="text" placeholder="Customer Full Name" id="custName" autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="chit-number">Chitty Number</label>
-                <input type="text" placeholder="Chity Number" id="chitNumber" required>
+                <input type="text" placeholder="Chity Number" id="chitNumber" autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="instalment">Instalment</label>
-                <input type="text" placeholder="Instalment Number" id="instalment" required>
+                <input type="text" placeholder="Instalment Number" id="instalment" autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="receipt-num">Receipt Number</label>
-                <input type="text" placeholder="Receipt Number" id="receiptNum" required>
+                <input type="text" placeholder="Receipt Number" id="receiptNum" autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="amount">Amount</label>
-                <input type="text" placeholder="Collection Amount" id="amount" required>
+                <input type="text" placeholder="Collection Amount" id="amount" autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="commission">Commission</label>
-                <input type="text" placeholder="Commission" id="commission">
+                <input type="text" placeholder="Commission" id="commission" autocomplete="off">
             </div>
             <div class="input-box">
                 <label for="bank-amount">Bank Amount</label>
-                <input type="text" placeholder="Amount Deposited In Bank" id="bankAmount" required>
+                <input type="text" placeholder="Amount Deposited In Bank" id="bankAmount" autocomplete="off" required>
             </div>
 
             <div class="btn-cnt">
