--- a/collection.html
+++ b/collection.html
@@ -42,8 +42,8 @@
                 <input type="date" placeholder="Deposit-date" id="depositDate" required>
             </div>
             <div class="input-box">
-                <label for="staff-name">Staff Name</label>
-                <input type="text" placeholder="Staff full Name" id="staffName"  autocomplete="off" required>
+                <label for="staff-name">Deposited By</label>
+                <input type="text" placeholder="Staff name or Method of Payment" id="staffName"  autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="receipt-date">Receipt Date</label>
