--- a/collection.html
+++ b/collection.html
@@ -43,7 +43,7 @@
             </div>
             <div class="input-box">
                 <label for="staff-name">Deposited By</label>
-                <input type="text" placeholder="Staff name or Method of Payment" id="staffName"  autocomplete="off" required>
+                <input type="text" placeholder="Staff name or Method of payment" id="staffName"  autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="receipt-date">Receipt Date</label>
