--- a/collection.html
+++ b/collection.html
@@ -59,23 +59,23 @@
             </div>
             <div class="input-box">
                 <label for="instalment">Instalment</label>
-                <input type="text" placeholder="Instalment Number" id="instalment" autocomplete="off" required>
+                <input type="number" placeholder="Instalment Number" id="instalment" autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="receipt-num">Receipt Number</label>
-                <input type="text" placeholder="Receipt Number" id="receiptNum" autocomplete="off" required>
+                <input type="number" placeholder="Receipt Number" id="receiptNum" autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="amount">Amount</label>
-                <input type="text" placeholder="Collection Amount" id="amount" autocomplete="off" required>
+                <input type="number" placeholder="Collection Amount" id="amount" autocomplete="off" required>
             </div>
             <div class="input-box">
                 <label for="commission">Commission</label>
-                <input type="text" placeholder="Commission" id="commission" autocomplete="off">
+                <input type="number" placeholder="Commission" id="commission" autocomplete="off">
             </div>
             <div class="input-box">
                 <label for="bank-amount">Bank Amount</label>
-                <input type="text" placeholder="Amount Deposited In Bank" id="bankAmount" autocomplete="off" required>
+                <input type="number" placeholder="Amount Deposited In Bank" id="bankAmount" autocomplete="off" required>
             </div>
 
             <div class="btn-cnt">
