--- a/collection.html
+++ b/collection.html
@@ -55,7 +55,34 @@
             </div>
             <div class="input-box">
                 <label for="chit-number">Chitty Number</label>
-                <input type="text" placeholder="Chity Number" id="chitNumber" autocomplete="off" required>
+                <select id="chitNumber" required>
+                    <option disabled selected>Select Chitty Number</option>
+                    <option>New </option>
+                    <option>58/2021</option>
+                    <option>43/2022</option>
+                    <option>45/2022</option>
+                    <option>70/2022</option>
+                    <option>76/2022</option>
+                    <option>12/2023</option>
+                    <option>43/2023</option>
+                    <option>45/2023</option>
+                    <option>53/2023</option>
+                    <option>54/2023</option>
+                    <option>63/2023</option>
+                    <option>64/2023</option>
+                    <option>11/2024</option>
+                    <option>18/2024</option>
+                    <option>29/2024</option>
+                    <option>30/2024</option>
+                    <option>36/2024</option>
+                    <option>37/2024</option>
+                    <option>41/2024</option>
+                    <option>42/2024</option>
+                    <option>50/2024</option>
+                    <option>51/2024</option>
+                    <option>56/2024</option>
+                    <option>57/2024</option>
+                </select>
             </div>
             <div class="input-box">
                 <label for="instalment">Instalment</label>
