--- a/collection.html
+++ b/collection.html
@@ -40,19 +40,19 @@
                 <input type="hidden" id="id" />
 
                 <label for="deposit-date">Deposit Date</label>
-                <input type="date" name="Bank Deposite Date" placeholder="Deposit-date" id="depositDate" autocomplete="off required>
+                <input type="date" name="Bank Deposite Date" placeholder="Deposit-date" id="depositDate"  required>
             </div>
             <div class="input-box">
                 <label for="staff-name">Staff Name</label>
-                <input type="text" name="Deposited" placeholder="Staff full Name" id="staffName" autocomplete="off required>
+                <input type="text" name="Deposited" placeholder="Staff full Name" id="staffName"  required>
             </div>
             <div class="input-box">
                 <label for="receipt-date">Receipt Date</label>
-                <input type="date" name="recipt-date" placeholder="Receipt-date" id="receiptDate" autocomplete="off required>
+                <input type="date" name="recipt-date" placeholder="Receipt-date" id="receiptDate" required>
             </div>
             <div class="input-box">
                 <label for="cust-name">Customer Name</label>
-                <input type="text" name="customer-name" placeholder="Customer Full Name" id="custName" autocomplete="off required>
+                <input type="text" name="customer-name" placeholder="Customer Full Name" id="custName" required>
             </div>
             <div class="input-box">
                 <label for="chit-number">Chitty Number</label>
@@ -88,23 +88,23 @@
             </div>
             <div class="input-box">
                 <label for="instalment">Instalment</label>
-                <input type="number" name="chity-instalment" placeholder="Instalment Number" id="instalment" autocomplete="off required>
+                <input type="number" name="chity-instalment" placeholder="Instalment Number" id="instalment"  required>
             </div>
             <div class="input-box">
                 <label for="receipt-num">Receipt Number</label>
-                <input type="text" name="recipt-num" placeholder="Receipt Number" id="receiptNum" autocomplete="off required>
+                <input type="text" name="recipt-num" placeholder="Receipt Number" id="receiptNum"  required>
             </div>
             <div class="input-box">
                 <label for="amount">Amount</label>
-                <input type="number" name="amount" placeholder="Collection Amount" id="amount" autocomplete="off required>
+                <input type="number" name="amount" placeholder="Collection Amount" id="amount"  required>
             </div>
             <div class="input-box">
                 <label for="commission">Commission</label>
-                <input type="text" name="commision" placeholder="Commission" id="commission" autocomplete="off>
+                <input type="text" name="commision" placeholder="Commission" id="commission" >
             </div>
             <div class="input-box">
                 <label for="bank-amount">Bank Amount</label>
-                <input type="text" name="bank-amount" placeholder="Amount Deposited In Bank" id="bankAmount" autocomplete="off required>
+                <input type="text" name="bank-amount" placeholder="Amount Deposited In Bank" id="bankAmount" required>
             </div>
 
             <div class="btn-cnt">
