--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
             {username:'ullanadu',password:'ulla',branch:'ullanadu'},
             {username:'vallakali',password:'vall',branch:'vallakali'},
             {username:'venmony',password:'venm',branch:'venmony'},
-            {username:'vettiyar',password:'vett',branch:'vettiyar'}
+            {username:'vettiyar',password:'vett',branch:'vettiyar'},
+            {username:'bharanikkavu',password:'bhara',branch:'bharanikkavu'},
+            {username:'kurathikad',password:'kurath',branch:'kurathikad'},
+            {username:'kuttippuram',password:'kutti',branch:'kuttippuram'},
+            {username:'nalumukku',password:'nalu',branch:'nalumukku'},
+            {username:'panmana',password:'panma',branch:'panmana'},
+            {username:'thadathilal',password:'thdat',branch:'thadathilal'},
 
         ];
 
