--- a/collection.html
+++ b/collection.html
@@ -62,6 +62,7 @@
                     <option>58/2021</option>
                     <option>43/2022</option>
                     <option>45/2022</option>
+                    <option>57/2022</option>
                     <option>69/2022</option>
                     <option>70/2022</option>
                     <option>76/2022</option>
