--- a/collection.html
+++ b/collection.html
@@ -85,6 +85,8 @@
                     <option>51/2024</option>
                     <option>56/2024</option>
                     <option>57/2024</option>
+                    <option>01/2025</option>
+                    <option>02/2025</option>
 
                 </select>
             </div>
