--- a/collection.html
+++ b/collection.html
@@ -87,6 +87,8 @@
                     <option>57/2024</option>
                     <option>01/2025</option>
                     <option>02/2025</option>
+                    <option>10/2025</option>
+                    <option>11/2025</option>
 
                 </select>
             </div>
