--- a/collection.html
+++ b/collection.html
@@ -89,6 +89,8 @@
                     <option>02/2025</option>
                     <option>10/2025</option>
                     <option>11/2025</option>
+                    <option>18/2025</option>
+                    <option>19/2025</option>
 
                 </select>
             </div>
