--- a/collection.html
+++ b/collection.html
@@ -92,7 +92,8 @@
                     <option>11/2025</option>
                     <option>18/2025</option>
                     <option>19/2025</option>
-
+                    <option>32/2025</option>
+                    <option>33/2025</option>
                 </select>
             </div>
             <div class="input-box">
