--- a/collection.html
+++ b/collection.html
@@ -94,6 +94,8 @@
                     <option>19/2025</option>
                     <option>32/2025</option>
                     <option>33/2025</option>
+                    <option>44/2025</option>
+                    <option>45/2025</option>
                 </select>
             </div>
             <div class="input-box">
