--- a/collection.html
+++ b/collection.html
@@ -63,6 +63,7 @@
                     <option>38/2022</option>
                     <option>43/2022</option>
                     <option>45/2022</option>
+                    <option>50/2022</option>
                     <option>57/2022</option>
                     <option>69/2022</option>
                     <option>70/2022</option>
