--- a/collection.html
+++ b/collection.html
@@ -97,6 +97,8 @@
                     <option>33/2025</option>
                     <option>44/2025</option>
                     <option>45/2025</option>
+                    <option>51/2025</option>
+                    <option>52/2025</option>
                 </select>
             </div>
             <div class="input-box">
@@ -141,3 +143,4 @@
     
 </body>
 </html>
+
